# openxr_android_template

./: .gitignore  Makefile  README.md  settings.gradle
app/: AndroidManifest.xml  CMakeLists.txt  build.gradle.kts
app/cpp/: graphics_plugin.hpp  graphics_plugin_vulkan.cpp  log.hpp  main.cpp  math_utils.h  openxr_program.cpp  openxr_program.hpp  openxr_utils.cpp  openxr_utils.hpp  platform_android.cpp  vulkan_swapchain_context.cpp  vulkan_swapchain_context.hpp
app/cpp/vulkan/: data_type.cpp  data_type.hpp  redering_pipeline_config.hpp  vertex_buffer_layout.cpp  vertex_buffer_layout.hpp  vulkan_buffer.cpp  vulkan_buffer.hpp  vulkan_rendering_context.cpp  vulkan_rendering_context.hpp  vulkan_rendering_pipeline.cpp  vulkan_rendering_pipeline.hpp  vulkan_shader.cpp  vulkan_shader.hpp  vulkan_utils.cpp  vulkan_utils.hpp
docs/: 01-set_meta_openxr_loader.md
scripts/: gen_keystore.sh
